WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131930
REGRESSION (
r160908
): Safari doesn't draw rotated images properly first time
https://bugs.webkit.org/show_bug.cgi?id=131930
Summary
REGRESSION (r160908): Safari doesn't draw rotated images properly first time
Darin Adler
Reported
2014-04-21 00:25:02 PDT
ImageDocument needs to explicitly updateStyleIfNeeded before looking at renderers
Attachments
Patch
(18.85 KB, patch)
2014-04-21 00:32 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(465.07 KB, application/zip)
2014-04-21 01:20 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(498.89 KB, application/zip)
2014-04-21 01:53 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(527.84 KB, application/zip)
2014-04-21 02:48 PDT
,
Build Bot
no flags
Details
Patch
(406.50 KB, patch)
2014-04-21 10:37 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(28.30 KB, patch)
2014-04-21 10:41 PDT
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2014-04-21 00:25:54 PDT
<
rdar://problem/16345245
>
Darin Adler
Comment 2
2014-04-21 00:32:38 PDT
Created
attachment 229792
[details]
Patch
Andreas Kling
Comment 3
2014-04-21 01:14:31 PDT
Regressions: Unexpected text-only failures (2) fast/images/favicon-as-image.html [ Failure ] http/tests/misc/favicon-as-image.html [ Failure ]
Build Bot
Comment 4
2014-04-21 01:20:50 PDT
Comment on
attachment 229792
[details]
Patch
Attachment 229792
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6715599019311104
New failing tests: http/tests/misc/favicon-as-image.html fast/images/favicon-as-image.html
Build Bot
Comment 5
2014-04-21 01:20:54 PDT
Created
attachment 229793
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2014-04-21 01:53:09 PDT
Comment on
attachment 229792
[details]
Patch
Attachment 229792
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5558055454375936
New failing tests: http/tests/misc/favicon-as-image.html fast/images/favicon-as-image.html
Build Bot
Comment 7
2014-04-21 01:53:13 PDT
Created
attachment 229794
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 8
2014-04-21 02:48:32 PDT
Comment on
attachment 229792
[details]
Patch
Attachment 229792
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6380866498461696
New failing tests: http/tests/misc/favicon-as-image.html fast/images/favicon-as-image.html
Build Bot
Comment 9
2014-04-21 02:48:36 PDT
Created
attachment 229796
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Darin Adler
Comment 10
2014-04-21 10:37:16 PDT
Created
attachment 229805
[details]
Patch
Darin Adler
Comment 11
2014-04-21 10:41:33 PDT
Created
attachment 229807
[details]
Patch
Darin Adler
Comment 12
2014-04-21 10:41:54 PDT
OK, should really be ready for review now.
Darin Adler
Comment 13
2014-04-21 11:09:14 PDT
Committed
r167598
: <
http://trac.webkit.org/changeset/167598
>
Darin Adler
Comment 14
2014-04-21 11:09:25 PDT
Comment on
attachment 229807
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229807&action=review
> Source/WebCore/loader/FrameLoaderClient.h:306 > virtual bool allowRunningInsecureContent(bool enabledPerSettings, SecurityOrigin*, const URL&) { return enabledPerSettings; }
Oops, forgot to delete this line. I have it deleted locally. I’ll do that in a follow-up if this gets landed by the commit queue.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug