Source/WebCore/html/ImageDocument.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008, 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2006, 2007, 2008, 2010, 2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -50,28 +50,21 @@ namespace WebCore {
 
 using namespace HTMLNames;
 
-class ImageEventListener : public EventListener {
+class ImageEventListener final : public EventListener {
 public:
-    static PassRefPtr<ImageEventListener> create(ImageDocument* document) { return adoptRef(new ImageEventListener(document)); }
-    static const ImageEventListener* cast(const EventListener* listener)
-    {
-        return listener->type() == ImageEventListenerType
-            ? static_cast<const ImageEventListener*>(listener)
-            : 0;
-    }
-
-    virtual bool operator==(const EventListener& other) override;
+    static PassRefPtr<ImageEventListener> create(ImageDocument& document) { return adoptRef(new ImageEventListener(document)); }
 
 private:
-    ImageEventListener(ImageDocument* document)
+    ImageEventListener(ImageDocument& document)
         : EventListener(ImageEventListenerType)
-        , m_doc(document)
+        , m_document(document)
     {
     }
 
+    virtual bool operator==(const EventListener&) override;
     virtual void handleEvent(ScriptExecutionContext*, Event*) override;
 
-    ImageDocument* m_doc;
+    ImageDocument& m_document;
 };
     
 class ImageDocumentParser final : public RawDataDocumentParser {
@@ -81,16 +74,13 @@ public:
         return adoptRef(new ImageDocumentParser(document));
     }
 
-    ImageDocument* document() const
-    {
-        return toImageDocument(RawDataDocumentParser::document());
-    }
-    
 private:
     ImageDocumentParser(ImageDocument& document)
         : RawDataDocumentParser(document)
     {
     }
+
+    ImageDocument& document() const;
 
     virtual void appendBytes(DocumentWriter&, const char*, size_t) override;
     virtual void finish() override;
@@ -120,67 +110,84 @@ inline PassRefPtr<ImageDocumentElement> ImageDocumentElement::create(ImageDocume
 
 // --------
 
-static float pageZoomFactor(const Document* document)
+LayoutSize ImageDocument::imageSize()
 {
-    Frame* frame = document->frame();
-    return frame ? frame->pageZoomFactor() : 1;
+    ASSERT(m_imageElement);
+    updateStyleIfNeeded();
+    return m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), frame() ? frame()->pageZoomFactor() : 1);
+}
+
+void ImageDocument::updateDuringParsing()
+{
+    if (!frame()->settings().areImagesEnabled())
+        return;
+
+    if (!m_imageElement)
+        createDocumentStructure();
+
+    m_imageElement->cachedImage()->addDataBuffer(loader()->mainResourceData().get());
+
+    imageUpdated();
+}
+
+void ImageDocument::finishedParsing()
+{
+    if (!parser()->isStopped() && m_imageElement) {
+        CachedImage& cachedImage = *m_imageElement->cachedImage();
+        RefPtr<ResourceBuffer> data = loader()->mainResourceData();
+
+        // If this is a multipart image, make a copy of the current part, since the resource data
+        // will be overwritten by the next part.
+        if (loader()->isLoadingMultipartContent())
+            data = data->copy();
+
+        cachedImage.finishLoading(data.get());
+        cachedImage.finish();
+
+        cachedImage.setResponse(loader()->response());
+
+        // Report the natural image size in the page title, regardless of zoom level.
+        // At a zoom level of 1 the image is guaranteed to have an integer size.
+        updateStyleIfNeeded();
+        IntSize size = flooredIntSize(cachedImage.imageSizeForRenderer(m_imageElement->renderer(), 1));
+        if (size.width()) {
+            // Compute the title. We use the decoded filename of the resource, falling
+            // back on the hostname if there is no path.
+            String name = decodeURLEscapeSequences(url().lastPathComponent());
+            if (name.isEmpty())
+                name = url().host();
+            setTitle(imageTitle(name, size));
+        }
+
+        imageUpdated();
+    }
+
+    HTMLDocument::finishedParsing();
+}
+    
+inline ImageDocument& ImageDocumentParser::document() const
+{
+    // Only used during parsing, so document is guaranteed to be non-null.
+    ASSERT(RawDataDocumentParser::document());
+    return toImageDocument(*RawDataDocumentParser::document());
 }
 
 void ImageDocumentParser::appendBytes(DocumentWriter&, const char*, size_t)
 {
-    Frame* frame = document()->frame();
-    if (!frame->loader().client().allowImage(frame->settings().areImagesEnabled(), document()->url()))
-        return;
-
-    CachedImage* cachedImage = document()->cachedImage();
-    RefPtr<ResourceBuffer> resourceData = frame->loader().documentLoader()->mainResourceData();
-    cachedImage->addDataBuffer(resourceData.get());
-
-    document()->imageUpdated();
+    document().updateDuringParsing();
 }
 
 void ImageDocumentParser::finish()
 {
-    if (!isStopped() && document()->imageElement()) {
-        CachedImage* cachedImage = document()->cachedImage();
-        RefPtr<ResourceBuffer> data = document()->frame()->loader().documentLoader()->mainResourceData();
-
-        // If this is a multipart image, make a copy of the current part, since the resource data
-        // will be overwritten by the next part.
-        if (document()->frame()->loader().documentLoader()->isLoadingMultipartContent())
-            data = data->copy();
-
-        cachedImage->finishLoading(data.get());
-        cachedImage->finish();
-
-        cachedImage->setResponse(document()->frame()->loader().documentLoader()->response());
-
-        // Report the natural image size in the page title, regardless of zoom level.
-        // At a zoom level of 1 the image is guaranteed to have an integer size.
-        IntSize size = flooredIntSize(cachedImage->imageSizeForRenderer(document()->imageElement()->renderer(), 1.0f));
-        if (size.width()) {
-            // Compute the title, we use the decoded filename of the resource, falling
-            // back on the (decoded) hostname if there is no path.
-            String fileName = decodeURLEscapeSequences(document()->url().lastPathComponent());
-            if (fileName.isEmpty())
-                fileName = document()->url().host();
-            document()->setTitle(imageTitle(fileName, size));
-        }
-
-        document()->imageUpdated();
-    }
-
-    document()->finishedParsing();
+    document().finishedParsing();
 }
-    
-// --------
 
-ImageDocument::ImageDocument(Frame* frame, const URL& url)
-    : HTMLDocument(frame, url, ImageDocumentClass)
-    , m_imageElement(0)
+ImageDocument::ImageDocument(Frame& frame, const URL& url)
+    : HTMLDocument(&frame, url, ImageDocumentClass)
+    , m_imageElement(nullptr)
     , m_imageSizeIsKnown(false)
     , m_didShrinkImage(false)
-    , m_shouldShrinkImage(shouldShrinkToFit())
+    , m_shouldShrinkImage(frame.settings().shrinksStandaloneImagesToFit() && frame.isMainFrame())
 {
     setCompatibilityMode(QuirksMode);
     lockCompatibilityMode();
@@ -194,31 +201,27 @@ PassRefPtr<DocumentParser> ImageDocument::createParser()
 void ImageDocument::createDocumentStructure()
 {
     RefPtr<Element> rootElement = Document::createElement(htmlTag, false);
-    appendChild(rootElement, IGNORE_EXCEPTION);
+    appendChild(rootElement);
     toHTMLHtmlElement(rootElement.get())->insertedByParser();
 
-    if (frame())
-        frame()->injectUserScripts(InjectAtDocumentStart);
+    frame()->injectUserScripts(InjectAtDocumentStart);
 
     RefPtr<Element> body = Document::createElement(bodyTag, false);
-    body->setAttribute(styleAttr, "margin: 0px;");
-    
-    rootElement->appendChild(body, IGNORE_EXCEPTION);
+    body->setAttribute(styleAttr, "margin: 0px");
+    rootElement->appendChild(body);
     
     RefPtr<ImageDocumentElement> imageElement = ImageDocumentElement::create(*this);
-    
     imageElement->setAttribute(styleAttr, "-webkit-user-select: none");        
     imageElement->setLoadManually(true);
     imageElement->setSrc(url().string());
+    body->appendChild(imageElement);
     
-    body->appendChild(imageElement, IGNORE_EXCEPTION);
-    
-    if (shouldShrinkToFit()) {
-        // Add event listeners
-        RefPtr<EventListener> listener = ImageEventListener::create(this);
-        if (DOMWindow* domWindow = this->domWindow())
-            domWindow->addEventListener("resize", listener, false);
+    if (m_shouldShrinkImage) {
+        RefPtr<EventListener> listener = ImageEventListener::create(*this);
+        if (DOMWindow* window = this->domWindow())
+            window->addEventListener("resize", listener, false);
         imageElement->addEventListener("click", listener.release(), false);
+
 #if PLATFORM(IOS)
         // Set the viewport to be in device pixels (rather than the default of 980).
         processViewport(ASCIILiteral("width=device-width"), ViewportArguments::ImageDocument);
@@ -228,7 +231,7 @@ void ImageDocument::createDocumentStructure()
     m_imageElement = imageElement.get();
 }
 
-float ImageDocument::scale() const
+float ImageDocument::scale()
 {
 #if PLATFORM(IOS)
     // On iOS big images are subsampled to make them smaller. So, don't resize them.
@@ -237,15 +240,14 @@ float ImageDocument::scale() const
     if (!m_imageElement)
         return 1;
 
-    FrameView* view = frame()->view();
+    FrameView* view = this->view();
     if (!view)
         return 1;
 
-    LayoutSize imageSize = m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this));
-    LayoutSize windowSize = LayoutSize(view->width(), view->height());
+    LayoutSize imageSize = this->imageSize();
 
-    float widthScale = static_cast<float>(windowSize.width()) / imageSize.width();
-    float heightScale = static_cast<float>(windowSize.height()) / imageSize.height();
+    float widthScale = view->width() / imageSize.width().toFloat();
+    float heightScale = view->height() / imageSize.height().toFloat();
 
     return std::min(widthScale, heightScale);
 #endif
@@ -259,7 +261,7 @@ void ImageDocument::resizeImageToFit()
     if (!m_imageElement)
         return;
 
-    LayoutSize imageSize = m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this));
+    LayoutSize imageSize = this->imageSize();
 
     float scale = this->scale();
     m_imageElement->setWidth(static_cast<int>(imageSize.width() * scale));
@@ -281,19 +283,20 @@ void ImageDocument::imageClicked(int x, int y)
 
     m_shouldShrinkImage = !m_shouldShrinkImage;
 
-    if (m_shouldShrinkImage)
+    if (m_shouldShrinkImage) {
+        // Call windowSizeChanged for its side effect of sizing the image.
         windowSizeChanged();
-    else {
+    } else {
         restoreImageSize();
 
         updateLayout();
 
         float scale = this->scale();
 
-        int scrollX = static_cast<int>(x / scale - (float)frame()->view()->width() / 2);
-        int scrollY = static_cast<int>(y / scale - (float)frame()->view()->height() / 2);
+        int scrollX = static_cast<int>(x / scale - view()->width() / 2.0f);
+        int scrollY = static_cast<int>(y / scale - view()->height() / 2.0f);
 
-        frame()->view()->setScrollPosition(IntPoint(scrollX, scrollY));
+        view()->setScrollPosition(IntPoint(scrollX, scrollY));
     }
 #endif
 }
@@ -305,13 +308,13 @@ void ImageDocument::imageUpdated()
     if (m_imageSizeIsKnown)
         return;
 
-    if (m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this)).isEmpty())
+    if (imageSize().isEmpty())
         return;
     
     m_imageSizeIsKnown = true;
-    
-    if (shouldShrinkToFit()) {
-        // Force resizing of the image
+
+    if (m_shouldShrinkImage) {
+        // Call windowSizeChanged for its side effect of sizing the image.
         windowSizeChanged();
     }
 }
@@ -320,29 +323,29 @@ void ImageDocument::restoreImageSize()
 {
     if (!m_imageElement || !m_imageSizeIsKnown)
         return;
-    
-    LayoutSize imageSize = m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this));
+
+    LayoutSize imageSize = this->imageSize();
     m_imageElement->setWidth(imageSize.width());
     m_imageElement->setHeight(imageSize.height());
-    
+
     if (imageFitsInWindow())
         m_imageElement->removeInlineStyleProperty(CSSPropertyCursor);
     else
         m_imageElement->setInlineStyleProperty(CSSPropertyCursor, CSSValueWebkitZoomOut);
-        
+
     m_didShrinkImage = false;
 }
 
-bool ImageDocument::imageFitsInWindow() const
+bool ImageDocument::imageFitsInWindow()
 {
     if (!m_imageElement)
         return true;
 
-    FrameView* view = frame()->view();
+    FrameView* view = this->view();
     if (!view)
         return true;
 
-    LayoutSize imageSize = m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this));
+    LayoutSize imageSize = this->imageSize();
 #if PLATFORM(IOS)
     LayoutSize windowSize = view->contentsToScreen(view->visibleContentRect()).size();
 #else
@@ -362,8 +365,8 @@ void ImageDocument::windowSizeChanged()
     if (fitsInWindow)
         return;
 
-    LayoutSize imageSize = m_imageElement->cachedImage()->imageSizeForRenderer(m_imageElement->renderer(), pageZoomFactor(this));
-    LayoutRect visibleScreenSize = frame()->view()->contentsToScreen(frame()->view()->visibleContentRect());
+    LayoutSize imageSize = this->imageSize();
+    LayoutRect visibleScreenSize = view()->contentsToScreen(view()->visibleContentRect());
 
     float widthScale = static_cast<float>(visibleScreenSize.width()) / imageSize.width();
     float heightScale = static_cast<float>(visibleScreenSize.height()) / imageSize.height();
@@ -383,7 +386,7 @@ void ImageDocument::windowSizeChanged()
     }
 
     if (m_didShrinkImage) {
-        // If the window has been resized so that the image fits, restore the image size
+        // If the window has been resized so that the image fits, restore the image size,
         // otherwise update the restored image size.
         if (fitsInWindow)
             restoreImageSize();
@@ -399,34 +402,20 @@ void ImageDocument::windowSizeChanged()
 #endif
 }
 
-CachedImage* ImageDocument::cachedImage()
-{ 
-    if (!m_imageElement)
-        createDocumentStructure();
-    
-    return m_imageElement->cachedImage();
-}
-
-bool ImageDocument::shouldShrinkToFit() const
-{
-    return frame()->settings().shrinksStandaloneImagesToFit() && frame()->isMainFrame();
-}
-
 void ImageEventListener::handleEvent(ScriptExecutionContext*, Event* event)
 {
     if (event->type() == eventNames().resizeEvent)
-        m_doc->windowSizeChanged();
+        m_document.windowSizeChanged();
     else if (event->type() == eventNames().clickEvent && event->isMouseEvent()) {
-        MouseEvent* mouseEvent = toMouseEvent(event);
-        m_doc->imageClicked(mouseEvent->x(), mouseEvent->y());
+        MouseEvent& mouseEvent = toMouseEvent(*event);
+        m_document.imageClicked(mouseEvent.x(), mouseEvent.y());
     }
 }
 
-bool ImageEventListener::operator==(const EventListener& listener)
+bool ImageEventListener::operator==(const EventListener& other)
 {
-    if (const ImageEventListener* imageEventListener = ImageEventListener::cast(&listener))
-        return m_doc == imageEventListener->m_doc;
-    return false;
+    // All ImageEventListener objects compare as equal; OK since there is only one per document.
+    return other.type() == ImageEventListenerType;
 }
 
 // --------
@@ -441,7 +430,7 @@ void ImageDocumentElement::didMoveToNewDocument(Document* oldDocument)
 {
     if (m_imageDocument) {
         m_imageDocument->disconnectImageElement();
-        m_imageDocument = 0;
+        m_imageDocument = nullptr;
     }
     HTMLImageElement::didMoveToNewDocument(oldDocument);
 }
